# StarCommander

./: .env.example  .gitattributes  .gitignore  README.md  ROADMAP.md  WINDOWS-STORE.md  config.example.json  devbox.json  keybinds.ahk  keybinds_v1.ahk  package-lock.json  package.json
.github/instructions/: documentation.instructions.md  general-coding.instructions.md  python-coding.instructions.md
app/: .gitignore  alembic.ini  backend_dev.py  main.py  pyproject.toml
app/backend/: api.py
app/backend/config/: __init__.py  database_config.py  global_config.py  logger_config.py  openapi_config.py  server_config.py
app/backend/controllers/: bot_controller.py
app/backend/controllers/common/: __init__.py  controller.py
app/backend/libs/: __init__.py  database.py  fastapi_setup.py  logger.py  server.py
app/backend/middlewares/: __init__.py  add_process_time.py  catch_unhandled_error.py
app/backend/models/: bot.py
app/backend/routers/: bot_routes.py  root.py
app/bots/: bot.py  factory.py  registry.py  runner.py
app/bots/base/: bot.py
app/bots/manager/: bot.py
app/bots/voice_relay/: bot.py
app/bots/voice_relay/mixins/: audio.py  pcm_stream.py  voice.py
app/config/: backend_config.py
app/core/: queues.py
app/logs/: .gitignore
app/migrations/: env.py  script.py.mako
app/migrations/versions/: 1766338218_41ad9ce2d0b3_create_bots_table.py
app/shared/: crypto.py  paths.py
docs/: PRIVACY.md  STORE-LISTING.md
electron-app/: .gitignore  README.md  package-lock.json  package.json
environments/: api.dev.env.example
legacy/: README.md
(+41 files in other folders)
