[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncio>=4.0.0",
    "cryptography>=46.0.3",
    "discord>=2.3.2",
    "fastapi>=0.126.0",
    "keyring>=25.7.0",
    "py-cord[voice]>=2.6.1",
    "pydantic-settings>=2.12.0",
    "pyside6>=6.10.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.39.0",
]
